--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,6 +1,6 @@
 h1{
 	font-family: Helvetica;
-	font-style: italic;
+	font-style: bold;
 	color: white;
 }
 body{
@@ -11,4 +11,5 @@ body{
 p {
 	color: white;
 	font-size: 24px; 
+	font-style: italic;
 }
